--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 }
 
 body {
+  background-color: rgb(90, 116, 248);
   font-family: "Young serif";
   display: flex;
   flex-direction: column;
@@ -13,4 +14,48 @@ body {
   height: 100vh;
   overflow: hidden;
   margin: 0;
+  padding: 10px;
+}
+
+.container {
+  background-color: #fff;
+  padding: 50px 20px;
+  border-radius: 10px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  max-width: 100%;
+  width: 800px;
+}
+
+h3 {
+  opacity: 0.5;
+  letter-spacing: 1px;
+  margin: 0;
+}
+
+.joke {
+  font-size: 30px;
+  letter-spacing: 1px;
+  line-height: 40px;
+  margin: 50px auto;
+  max-width: 600px;
+}
+
+.btn {
+  background-color: rgb(174, 48, 174);
+  color: #fff;
+  padding: 14px 40px;
+  font-size: 16px;
+  border: 0;
+  border-radius: 10px;
+  cursor: pointer;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.1);
+}
+
+.btn:focus {
+  outline: none;
+}
+
+.btn:active {
+  transform: scale(0.97);
 }
