--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* These are the general stylings for the root and the body element */
 @import url("https://fonts.googleapis.com/css2?family=Young+Serif&display=swap");
 
 * {
@@ -17,6 +18,7 @@ body {
   padding: 10px;
 }
 
+/* These are for the main container */
 .container {
   background-color: #fff;
   padding: 50px 20px;
@@ -33,6 +35,7 @@ h3 {
   margin: 0;
 }
 
+/* This is for the jokes */
 .joke {
   font-size: 30px;
   letter-spacing: 1px;
@@ -41,6 +44,7 @@ h3 {
   max-width: 600px;
 }
 
+/* These are for the button */
 .btn {
   background-color: rgb(174, 48, 174);
   color: #fff;
